--- a/Titanium-52/Makefile
+++ b/Titanium-52/Makefile
@@ -3,7 +3,7 @@ VENV := .venv
 PIP := $(VENV)/bin/pip
 JEFFERSON := $(VENV)/bin/jefferson
 
-SUBDIRS := bootloader drgos jffs2
+SUBDIRS := drgldr drgos jffs2
 
 .PHONY: all clean distclean $(SUBDIRS)
 all: $(SUBDIRS)
