--- a/Titanium-52/jffs2/Makefile
+++ b/Titanium-52/jffs2/Makefile
@@ -1,10 +1,11 @@
 JEFFERSON := ../.venv/bin/jefferson
 
-all: extracted
-
-extracted: jffs2.img $(JEFFERSON)
+extracted: JFFS2.img $(JEFFERSON)
 	$(JEFFERSON) -d $@ $<
 	find $@ -type f -exec shasum {} \;
 
+JFFS2.img: ../mtd/mtdblock1
+	ln -vsf $< $@
+
 clean:
-	rm -rf extracted/
+	rm -rf JFFS2.img extracted
