Update Makefiles and .gitignore to include unique-param.txt and adjust build rules

--- a/Titanium-52/drgldr/Makefile
+++ b/Titanium-52/drgldr/Makefile
@@ -1,3 +1,5 @@
+all: drgldr-hrg1000-1.3.1-RC14.bin drgldr.env
+
 drgldr-hrg1000-1.3.1-RC14.bin: drgldr-hrg1000-1.3.1-RC14.uImage
 	dd if=$< of=$@ bs=64 skip=1
 
@@ -9,6 +11,15 @@ Bootloader1.img: ../mtd/mtdblock2
 	ln -vsf $< $@
 
 Bootloader2.img: ../mtd/mtdblock3
+	ln -vsf $< $@
+
+drgldr.env: drgldr.cfg
+	dd if=$< bs=4 skip=1 | tr '\0' '\n' > $@
+
+drgldr.cfg: BootloaderCFG.img
+	dd if=$< of=$@ bs=16384 count=1
+
+BootloaderCFG.img: ../mtd/mtdblock5
 	ln -vsf $< $@
 
 clean:
