--- a/Titanium-52/unique-param/Makefile
+++ b/Titanium-52/unique-param/Makefile
@@ -1,7 +1,8 @@
 unique-param.txt: UniqueParam.img
+	dd if=$< of=$@ bs=1 count=2252
 
 UniqueParam.img: ../mtd/mtdblock4
 	ln -vsf $< $@
 
 clean:
-	rm -rf UniqueParam.img
+	rm -rf UniqueParam.img unique-param.txt
