Refactor Makefiles for improved structure and dependencies; remove unnecessary links and update paths for image targets.

--- a/Element-G1034/ecos/Makefile
+++ b/Element-G1034/ecos/Makefile
@@ -6,12 +6,9 @@ Flash_OS%.Image: Flash_OS%.zImage
 Flash_OS%.zImage: Flash_OS%.uImage
 	dd if=$< of=$@ bs=1 skip=64
 
-Flash_OS%.uImage Flash_OS%.rest.bin: Flash_OS%.bin
+Flash_OS%.uImage Flash_OS%.rest.bin: ../fis/bin/Flash_OS%.bin
 	dd if=$< of=$@ bs=1 count=342175
 	dd if=$< of=Flash_OS$*.rest.bin bs=1 skip=342175
-
-%.bin: ../fis/bin/%.bin
-	ln -vsf "$<" "$@"
 
 clean:
 	rm -f *.uImage *.zImage *.Image *.bin
