--- a/Titanium-52/drgboot/Makefile
+++ b/Titanium-52/drgboot/Makefile
@@ -1,9 +1,8 @@
-drgboot-hrg1000-1.3.1-RC12.bin: Bootstrap.img
+all: drgboot-hrg1000-1.3.1-RC12.bin
+
+drgboot-hrg1000-1.3.1-RC12.bin: ../mtd/Bootstrap.img
 	dd if=$< of=$@ bs=1 count=70058
 	# rest is padded with ffff
 
-Bootstrap.img: ../mtd/mtdblock0
-	ln -vsf $< $@
-
 clean:
-	rm -rf Bootstrap.img drgboot*
+	rm -rf drgboot*
