--- a/Titanium-52/jffs2/Makefile
+++ b/Titanium-52/jffs2/Makefile
@@ -1,11 +1,8 @@
 JEFFERSON := ../.venv/bin/jefferson
 
-extracted: JFFS2.img $(JEFFERSON)
+extracted: ../mtd/JFFS2.img $(JEFFERSON)
 	$(JEFFERSON) -d $@ $<
 	find $@ -type f -exec shasum {} \;
-
-JFFS2.img: ../mtd/mtdblock1
-	ln -vsf $< $@
 
 clean:
 	rm -rf JFFS2.img extracted
